<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/ad_cat1">
        <menu>
    <item android:title="@string/ad_my_ads"
        android:id="@+id/id_my_ads"
        />
    <item android:title="@string/ad_car"
        android:id="@+id/id_car"/>
    <item android:title="@string/ad_pc"
        android:id="@+id/id_pc"
        />
    <item android:title="@string/ad_smp"
        android:id="@+id/id_my_smp"
        />
    <item android:title="@string/ad_dm"
        android:id="@+id/id_dm"/>
        </menu>

</item>

<item android:title="@string/ad_cat2"
android:id="@+id/id_cat2">
<menu>
    <item android:title="@string/ad_sing_up"
        android:id="@+id/id_sing_up"/>

    <item android:title="@string/ad_in"
        android:id="@+id/id_in"/>
    <item android:title="@string/ad_out"
        android:id="@+id/id_out"/>
</menu>
</item>

</menu>

